--- a/phishing-simulator/.env.development
+++ b/phishing-simulator/.env.development
@@ -1,4 +1,4 @@
 MONGO_URI=mongodb://root:rootpass@localhost:27017/cymulatephisingDB?authSource=admin
-SOURCE_EMAIL=benpipkin.il@gmail.com
-GMAIL_APP_PASS=ycizittuxlgxwhil
+SOURCE_EMAIL=test@gmail.com
+GMAIL_APP_PASS=test
 PHISHING_LINK_BASE_URL=http://localhost:3001/tracking/
